--- a/jupyter-notebooks/scala_doc_01.ipynb
+++ b/jupyter-notebooks/scala_doc_01.ipynb
@@ -44,7 +44,7 @@
     "//text dosyasından yeni bir Dataset oluşturuyoruz.\n",
     "\n",
     "// Sanırım:\n",
-    "// Bir Datasetten veri almak işlemi action deniyor.\n",
+    "// Bir Datasetten veri alma işlemine action deniyor.\n",
     "// Bir Datasetin itemlarını kullanarak yeni bir Dataset oluşturmaya transform deniyor."
    ]
   },
