--- a/jupyter-notebooks/scala_doc_01.ipynb
+++ b/jupyter-notebooks/scala_doc_01.ipynb
@@ -25,16 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\r\n"
+       "Intitializing Scala interpreter ..."
       ]
      },
-     "execution_count": 8,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://172.18.0.1:4040\n",
+       "SparkContext available as 'sc' (version = 3.0.1, master = local[*], app id = local-1613816717137)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res3: Long = 8\n"
+       "res0: Long = 8\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,13 +213,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "textFile' daki item sayısı: 8\n",
+      "+--------------------+\n",
+      "|               value|\n",
+      "+--------------------+\n",
+      "|            ## Giriş|\n",
+      "|                    |\n",
+      "|Apache Spark ile ...|\n",
+      "|                    |\n",
+      "|~~Apache Spark' ı...|\n",
+      "|                    |\n",
+      "|                    |\n",
+      "|Scala kullanmaya ...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Tam olarak ne yaptığını  görmek istiyorum.\n",
+    "println(\"textFile' daki item sayısı: \" + textFile.count())\n",
+    "textFile.show() // README.md dosyasındaki satırları görüyorsunuz. README.md dosyasında toplamda 8 satır var.\n",
+    "// Hiç bir şey yazmayan satırlarıda item olarak alıyor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tempDataset' teki item sayısı: 8\n",
       "+--------------------+\n",
       "|               value|\n",
       "+--------------------+\n",
@@ -218,17 +272,18 @@
     {
      "data": {
       "text/plain": [
-       "newTextFileDataset: org.apache.spark.sql.Dataset[Array[String]] = [value: array<string>]\n"
+       "tempDataset: org.apache.spark.sql.Dataset[Array[String]] = [value: array<string>]\n"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Tam olarak ne yaptığını  görmek istiyorum.\n",
-    "textFile.map(line => line.split(\" \")).show() //map ile transform show, ile action"
+    "var tempDataset = textFile.map(line => line.split(\" \"))\n",
+    "println(\"tempDataset' teki item sayısı: \" + tempDataset.count())\n",
+    "tempDataset.show() //map ile transform, show ile action."
    ]
   },
   {
@@ -344,6 +399,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "textFile item count: 8\n",
+      "+--------------------+\n",
+      "|               value|\n",
+      "+--------------------+\n",
+      "|            ## Giriş|\n",
+      "|                    |\n",
+      "|Apache Spark ile ...|\n",
+      "|                    |\n",
+      "|~~Apache Spark' ı...|\n",
+      "|                    |\n",
+      "|                    |\n",
+      "|Scala kullanmaya ...|\n",
+      "+--------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(\"textFile item count: \" + textFile.count())\n",
+    "textFile.show() // textFile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wordDataset item count: 44\n",
       "+----------+\n",
       "|     value|\n",
       "+----------+\n",
@@ -378,7 +465,7 @@
        "wordDataset: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,6 +473,7 @@
    "source": [
     "// Şimdi yukarıdaki işlemleri teker teker yapalım\n",
     "val wordDataset = textFile.flatMap(line => line.split(\" \"))\n",
+    "println(\"wordDataset item count: \" + wordDataset.count())\n",
     "wordDataset.show()"
    ]
   },
@@ -438,7 +526,8 @@
     }
    ],
    "source": [
-    "val workDatasetKeyCountPair = wordDataset.groupByKey(identity).count()\n",
+    "val workDatasetKeyCountPair = wordDataset.groupByKey(identity).count() // Burada tam olarak nasıl key count\n",
+    "// yapıyor anlamadım. Çıktı falan da göremediğim için nasıl yapıyor diye bir mantık kuramadım.\n",
     "workDatasetKeyCountPair.show()"
    ]
   },
