--- a/jupyter-notebooks/scala_doc_2_RDD.ipynb
+++ b/jupyter-notebooks/scala_doc_2_RDD.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "## [Overview](https://spark.apache.org/docs/latest/rdd-programming-guide.html#overview)\n",
     "\n",
-    "**High level** her Spark uygulaması ***driver program*** denen bir şeyden oluşur. Bu ***driver program*** kullanıcın *main* fonksiyonunu çalıştırır ve **cluster** üzerinde çeşitli paralel işlemleri execute eder.\n",
+    "**High level** her Spark uygulaması ***driver program*** denen bir şeyden oluşur. Bu ***driver program*** kullanıcının *main* fonksiyonunu çalıştırır ve **cluster** üzerinde çeşitli paralel işlemleri execute eder.\n",
     "\n",
-    "Spark' ın sağladığı main **absraction** ***resilient distributed dataset*** (RDD) olmaktadır. RDD, bir elemanlar kümesidir(collection of elements). RDD, cluster üzerindeki node' lar boyunca partition' lara (bölümlere) ayrılmıştır. RDD' lerin node' lara bölünmesi sayesinde paralel işlemler yapılabilmektedir.\n",
+    "Spark' ın sağladığı **<font color=\"red\">main absraction</font>** ***resilient distributed dataset*** (RDD) olmaktadır. RDD, bir elemanlar kümesidir(collection of elements). RDD, cluster üzerindeki node' lar boyunca partition' lara (bölümlere) ayrılmıştır. RDD' lerin node' lara bölünmesi sayesinde paralel işlemler yapılabilmektedir.\n",
     "\n",
     "RDD' ler çeşitli formattaki dosyalardan ya da driver program içindeki collectionlardan oluşturulabilir (collectiondan kasıt sanırım scala dizileri ya da hangi dili kullanıyorsanız).\n",
     "\n",
@@ -25,15 +25,15 @@
     "\n",
     "___\n",
     "\n",
-    "Spark' ın ikinci absraction' u paralel işlemler kullanılan ***shared variables*** tir.\n",
+    "Spark' ın **<font color=\"red\">ikinci absraction</font>**' u paralel işlemler kullanılan ***shared variables*** tir.\n",
     "\n",
     "Sanırım Spark' ta Default olarak şöyle bir şey gerçekleştiriliyor: Spark' ta paralel bir işlem başladığında node' lara task' lar dağıtılıyor. Bu task' lar için gerekli olan variable' lar node' larda çalışacak olan fonksiyona kopyalanıyor.\n",
     "\n",
     "Bazen bir tane değişkenin tasklar arasında ya da task ile driver program arasında shared edilmesi gerekiyormuş. Bu özelliğin var olma sebebi bu.\n",
     "\n",
     "Sparkta iki tane shared variables türü varmış:\n",
-    "***broadcast variables***: Tüm nodeların memory' lerindeki bir value' yi cache almak için kullanılır. (Ne demek bilmiyorum.)\n",
-    "***accumulators***: Yanlızca \"added\" değişkenlermiş. Örneğin counters ve sum. (Ne demek bilmiyorum as well)"
+    "***broadcast variables***: Tüm nodeların memory' lerindeki bir value' yi cache almak için kullanılır. (Ne demek anlamadım.)\n",
+    "***accumulators***: Yanlızca \"added\" değişkenlermiş. Örneğin counters ve sum. (Ne demek anlamadım)"
    ]
   },
   {
@@ -77,8 +77,9 @@
    ],
    "source": [
     "val data = Array(1, 2, 3, 4, 5)\n",
-    "val distData = sc.parallelize(data) //RDD oluştu Normally, Spark tries to set the number of partitions automatically based on your cluster. However, you can also set it manually by passing it as a second parameter to parruldu \n",
-    "// ve paralel işlem yapılabilir artık."
+    "val distData = sc.parallelize(data) //RDD oluştu ve paralel işlem yapılabilir artık.\n",
+    "// Normally, Spark tries to set the number of partitions automatically based on your cluster. \n",
+    "// However, you can also set it manually by passing it as a second parameter to parallelize "
    ]
   },
   {
@@ -121,7 +122,7 @@
    "source": [
     "import org.apache.spark.rdd.RDD;\n",
     "\n",
-    "val distFİle: RDD[String] = sc.textFile(\"../README.md\") //distFile' in türünü atamasını Scala' nın bulması yerine\n",
+    "val distFile: RDD[String] = sc.textFile(\"../README.md\") //distFile' in türünü atamasını Scala' nın bulması yerine\n",
     "// kendim atadığım için compile edilirken daha hızlı çalışacaktır."
    ]
   },
@@ -157,7 +158,30 @@
    "metadata": {},
    "source": [
     "### [Basic](https://spark.apache.org/docs/latest/rdd-programming-guide.html#basics)\n",
+    "> Spark' ın doc' u hakkikaten güzel anlatmış.\n",
+    "\n",
+    "To illustrate RDD basics, consider the simple program below:\n",
+    "```scala\n",
+    "val lines = sc.textFile(\"data.txt\")\n",
+    "val lineLengths = lines.map(s => s.length)\n",
+    "val totalLength = lineLengths.reduce((a, b) => a + b)\n",
+    "```\n",
+    "The first line defines a base RDD from an external file. This dataset is not loaded in memory or otherwise acted on: lines is merely a pointer to the file. The second line defines lineLengths as the result of a map transformation. Again, lineLengths is not immediately computed, due to laziness. Finally, we run reduce, which is an action. At this point Spark breaks the computation into tasks to run on separate machines, and each machine runs both its part of the map and a local reduction, returning only its answer to the driver program.\n",
+    "\n",
+    "If we also wanted to use lineLengths again later, we could add:\n",
+    "\n",
+    "```scala\n",
+    "lineLengths.persist()\n",
+    "```\n",
+    "before the reduce, which would cause lineLengths to be saved in memory after the first time it is computed.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Basic](https://spark.apache.org/docs/latest/rdd-programming-guide.html#basics)"
    ]
   }
  ],
