add: PySpark JSON

--- a/jupyter-notebooks/pySparkPostgreSQL.ipynb
+++ b/jupyter-notebooks/pySparkPostgreSQL.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cec78daa",
+   "id": "f29d463d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6c908d20",
+   "id": "85341998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c4f4e551",
+   "id": "70944c5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85096550",
+   "id": "57fabb2c",
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1ac0d33a",
+   "id": "bb21a262",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9c4347e4",
+   "id": "e7326f4e",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "53d8c092",
+   "id": "dd90ef8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cd1c870d",
+   "id": "e668834c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "51587267",
+   "id": "9c31f2ff",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "46725fc1",
+   "id": "2a654cf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6e7214d1",
+   "id": "5d686bb5",
    "metadata": {},
    "outputs": [
     {
@@ -294,11 +294,12 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0e62f966",
+   "id": "ef9094bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Şimdi elde ettiğimiz DF' ı PostgreSQL' e yazalım.\n",
+    "# Burası tam olarak ne yapar bilmiyorum.\n",
     "\n",
     "write_table = 'spark_postgres'\n",
     "\n",
@@ -308,7 +309,7 @@
     "    .option(\"user\", user) \\\n",
     "    .option(\"password\", password) \\\n",
     "    .option(\"driver\", driver) \\\n",
-    "    .mode('append') \\ # Acaba veritabanının içini boşaltıp doldurma özelliği var mı? SAn\n",
+    "    .mode('append') \\ # Acaba veritabanının içini boşaltıp doldurma özelliği var mı? Başka hangi mod' lar var?\n",
     "    .save()"
    ]
   }
