--- a/jupyter-notebooks/PySparkDataFrame.ipynb
+++ b/jupyter-notebooks/PySparkDataFrame.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fa2818",
+   "id": "482ec013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aa7aa837",
+   "id": "74a2372d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "58a67fed",
+   "id": "599cff2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "05cb5d0d",
+   "id": "095e926c",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c56869e6",
+   "id": "7890d6f2",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "591d6487",
+   "id": "96893644",
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a2da131e",
+   "execution_count": 23,
+   "id": "498a8e08",
    "metadata": {},
    "outputs": [
     {
@@ -213,13 +213,15 @@
     }
    ],
    "source": [
+    "# Filter fonksiyonu. Bu şekilde filter yapmak aklımda kalır.\n",
+    "\n",
     "df.filter(df.state == 'OH').show(truncate=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b76de575",
+   "id": "5c1df7a5",
    "metadata": {},
    "outputs": [
     {
@@ -238,16 +240,18 @@
     }
    ],
    "source": [
-    "#Using SQL col() function\n",
+    "# Using SQL col() function. Bu şekilde filter yapmak aklımda kalmaz\n",
+    "\n",
     "from pyspark.sql.functions import col\n",
+    "\n",
     "df.filter(col(\"state\") == \"OH\") \\\n",
     "    .show(truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9e93d995",
+   "execution_count": 24,
+   "id": "4bd4e9f3",
    "metadata": {},
    "outputs": [
     {
@@ -276,22 +280,36 @@
       "|     {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
       "|{Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
       "+-------------------+------------------+-----+------+\n",
+      "\n",
+      "+-------------------+------------------+-----+------+\n",
+      "|               name|         languages|state|gender|\n",
+      "+-------------------+------------------+-----+------+\n",
+      "|     {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
+      "|{Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "+-------------------+------------------+-----+------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "#Using SQL Expression\n",
+    "# Bu şekildeki filter' larda güzel\n",
+    "\n",
+    "# Using SQL Expression\n",
+    "\n",
     "df.filter(\"gender == 'M'\").show()\n",
-    "#For not equal\n",
-    "df.filter(\"gender != 'M'\").show()\n",
+    "\n",
+    "df.filter('gender = \"F\"').show() # Veritabanı mantığıyla çalıştığı için tek = yeter.\n",
+    "\n",
+    "# For not equal\n",
+    "\n",
+    "df.filter(\"gender != 'M'\").show() # Eşit değil\n",
     "df.filter(\"gender <> 'M'\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "87c44877",
+   "execution_count": 29,
+   "id": "0509dc41",
    "metadata": {
     "scrolled": false
    },
@@ -313,22 +331,204 @@
       "|{James, , Smith}      |[Java, Scala, C++]|OH   |M     |\n",
       "|{Mike, Mary, Williams}|[Python, VB]      |OH   |M     |\n",
       "+----------------------+------------------+-----+------+\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "+--------------------+------------+-----+------+\n",
+      "|name                |languages   |state|gender|\n",
+      "+--------------------+------------+-----+------+\n",
+      "|{Maria, Anne, Jones}|[CSharp, VB]|NY   |M     |\n",
+      "|{Jen, Mary, Brown}  |[CSharp, VB]|NY   |M     |\n",
+      "+--------------------+------------+-----+------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Filter multiple condition\n",
+    "# Filter multiple condition. İlki kullanışlı değil ama ikincisi kullanışlı.\n",
+    "\n",
     "df.filter( (df.state  == \"OH\") & (df.gender  == \"M\") ) \\\n",
     "    .show(truncate=False)\n",
     "\n",
-    "df.filter(\"state = 'OH' and gender = 'M'\").show(truncate=False)"
+    "df.filter(\"state = 'OH' and gender = 'M'\").show(truncate=False)\n",
+    "\n",
+    "print(\"\\n\\n\")\n",
+    "\n",
+    "# Bir tane değişken tanımlasam mesela ve ikincisinde kullansam. Aklıma belki ilkini kullanma yöntemleri dinamik\n",
+    "# sorgular çekmektir.\n",
+    "\n",
+    "state = 'NY'\n",
+    "gender = 'M'\n",
+    "\n",
+    "df.filter(f\"state = '{state}' and gender = '{gender}'\").show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "95fd4fbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+\n",
+      "|name.firstname|\n",
+      "+--------------+\n",
+      "|         James|\n",
+      "|          Anna|\n",
+      "|         Julia|\n",
+      "|         Maria|\n",
+      "|           Jen|\n",
+      "|          Mike|\n",
+      "+--------------+\n",
+      "\n",
+      "+----------------+------------------+-----+------+\n",
+      "|            name|         languages|state|gender|\n",
+      "+----------------+------------------+-----+------+\n",
+      "|{James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "+----------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------+-----+------+\n",
+      "|                name|   languages|state|gender|\n",
+      "+--------------------+------------+-----+------+\n",
+      "|{Maria, Anne, Jones}|[CSharp, VB]|   NY|     M|\n",
+      "+--------------------+------------+-----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aklıma bir başka şey olarakta şu geldi: Neden name kolonunda ve languages kolonunda filter yapmamış.\n",
+    "\n",
+    "df.select(df['name']['firstname']).show()\n",
+    "\n",
+    "df.filter(df['name']['firstname'] == 'James').show()\n",
+    "\n",
+    "df.filter(\"name.firstname = 'Maria'\").show()\n",
+    "\n",
+    "# languages' ınkini denedim ama yapamadım."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8bde1e32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "|      {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
+      "|  {Jen, Mary, Brown}|      [CSharp, VB]|   NY|     M|\n",
+      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "|      {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
+      "|  {Jen, Mary, Brown}|      [CSharp, VB]|   NY|     M|\n",
+      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Veritabanlarındaki IN özelliği\n",
+    "\n",
+    "li = [\"OH\", \"CA\", \"DE\"]\n",
+    "\n",
+    "df.filter(df.state.isin(li)).show()\n",
+    "\n",
+    "li = ['James', 'Julia', 'Maria']\n",
+    "\n",
+    "df.filter(df.name.firstname.isin(li)).show()\n",
+    "\n",
+    "df.filter(~df.state.isin(li)).show()\n",
+    "df.filter(df.state.isin(li) == False).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "54d5aee2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|      {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
+      "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
+      "|  {Jen, Mary, Brown}|      [CSharp, VB]|   NY|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|                name|         languages|state|gender|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
+      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
+      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
+      "+--------------------+------------------+-----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starts With, Ends With, Contains\n",
+    "\n",
+    "df.filter(df.state.startswith('N')).show()\n",
+    "\n",
+    "df.filter(df.state.endswith('H')).show()\n",
+    "\n",
+    "df.filter(df.state.contains('H')).show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad84147a",
+   "id": "444acb00",
    "metadata": {},
    "outputs": [],
    "source": [
