--- a/jupyter-notebooks/PySparkDataFrame.ipynb
+++ b/jupyter-notebooks/PySparkDataFrame.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "74a2372d",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "96893644",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
     "\n",
     "# First Generate DataFrame\n",
     "\n",
-    "from pyspark.sql.types import StructType,StructField \n",
+    "from pyspark.sql.types import StructType, StructField \n",
     "from pyspark.sql.types import StringType, IntegerType, ArrayType\n",
     "data = [\n",
     "    ((\"James\",\"\",\"Smith\"),[\"Java\",\"Scala\",\"C++\"],\"OH\",\"M\"),\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "8bde1e32",
    "metadata": {},
    "outputs": [
@@ -441,23 +441,17 @@
       "+--------------------+------------------+-----+------+\n",
       "|                name|         languages|state|gender|\n",
       "+--------------------+------------------+-----+------+\n",
-      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
       "|      {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
-      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
       "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
       "|  {Jen, Mary, Brown}|      [CSharp, VB]|   NY|     M|\n",
-      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
       "+--------------------+------------------+-----+------+\n",
       "\n",
       "+--------------------+------------------+-----+------+\n",
       "|                name|         languages|state|gender|\n",
       "+--------------------+------------------+-----+------+\n",
-      "|    {James, , Smith}|[Java, Scala, C++]|   OH|     M|\n",
       "|      {Anna, Rose, }|[Spark, Java, C++]|   NY|     F|\n",
-      "| {Julia, , Williams}|      [CSharp, VB]|   OH|     F|\n",
       "|{Maria, Anne, Jones}|      [CSharp, VB]|   NY|     M|\n",
       "|  {Jen, Mary, Brown}|      [CSharp, VB]|   NY|     M|\n",
-      "|{Mike, Mary, Will...|      [Python, VB]|   OH|     M|\n",
       "+--------------------+------------------+-----+------+\n",
       "\n"
      ]
@@ -470,9 +464,9 @@
     "\n",
     "df.filter(df.state.isin(li)).show()\n",
     "\n",
-    "li = ['James', 'Julia', 'Maria']\n",
+    "li2 = ['James', 'Julia', 'Maria']\n",
     "\n",
-    "df.filter(df.name.firstname.isin(li)).show()\n",
+    "df.filter(df.name.firstname.isin(li2)).show()\n",
     "\n",
     "df.filter(~df.state.isin(li)).show()\n",
     "df.filter(df.state.isin(li) == False).show()"
@@ -523,6 +517,82 @@
     "df.filter(df.state.endswith('H')).show()\n",
     "\n",
     "df.filter(df.state.contains('H')).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fe43c82d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+----------+\n",
+      "| id|      name|\n",
+      "+---+----------+\n",
+      "|  5|Rames rose|\n",
+      "+---+----------+\n",
+      "\n",
+      "+---+------------+\n",
+      "| id|        name|\n",
+      "+---+------------+\n",
+      "|  2|Michael Rose|\n",
+      "|  4|  Rames Rose|\n",
+      "|  5|  Rames rose|\n",
+      "+---+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# like and rlike (regex like)\n",
+    "\n",
+    "data2 = [\n",
+    "    (2,\"Michael Rose\"),\n",
+    "    (3,\"Robert Williams\"),\n",
+    "    (4,\"Rames Rose\"),\n",
+    "    (5,\"Rames rose\")\n",
+    "]\n",
+    "\n",
+    "df2 = spark.createDataFrame(data = data2, schema = [\"id\",\"name\"])\n",
+    "\n",
+    "# like - SQL LIKE pattern. Bunda doğrudan eşleşmesine bakıyor\n",
+    "df2.filter(df2.name.like(\"%rose%\")).show()\n",
+    "\n",
+    "# Sanırım şu ?i ignore demek sanırım\n",
+    "df2.filter(df2.name.rlike(\"(?i)^*rose$\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9cb56fff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+------------------+-----+------+\n",
+      "|name            |languages         |state|gender|\n",
+      "+----------------+------------------+-----+------+\n",
+      "|{James, , Smith}|[Java, Scala, C++]|OH   |M     |\n",
+      "|{Anna, Rose, }  |[Spark, Java, C++]|NY   |F     |\n",
+      "+----------------+------------------+-----+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Array column. Yukarıda languages ile ilgili bir arama yapamamıştım.\n",
+    "\n",
+    "from pyspark.sql.functions import array_contains\n",
+    "\n",
+    "\n",
+    "df.filter(array_contains(df.languages,\"Java\")) \\\n",
+    "    .show(truncate=False)"
    ]
   },
   {
