düzenlendi: read_write_json.ipynb
Bu dosyadaki bazı yazım yanlışları ve dosya düzeni düzeltildi

--- a/scala/code/read_write_json.ipynb
+++ b/scala/code/read_write_json.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "1. Spark Session başlatılır\n",
     "2. JSON dosyası okunur\n",
-    "3. JSON dosyası üzerinde basit bir filtreleme yapılır. Yapılmasına gerek yok\n",
+    "3. JSON dosyası üzerinde basit bir filtreleme yapılır. JSON yazmak için yapılması elzem değil\n",
     "4. JSON dosyası belirtilen dizine yazılır\n"
    ]
   },
@@ -118,8 +118,8 @@
     "\n",
     "val json_file: String = \"../../datasets/json/orders_input.json\"\n",
     "\n",
-    "val json_df = spark.read.json(json_file) // Okunan JSON dosyayı bir DataFrame olarak okunur. \n",
-    "// `json_df` bir DataFrame nesnesidir. Bu cell' in output' unda görebilirsiniz.\n",
+    "val json_df = spark.read.json(json_file) // Okunan JSON dosyası bir DataFrame olarak okunur. \n",
+    "// `json_df` bir DataFrame nesnesidir. Bu cell' in out kısmında görebilirsiniz.\n",
     "\n",
     "json_df.show() // DataFrame' in 20 satırı ekrana basılır"
    ]
@@ -171,16 +171,22 @@
     }
    ],
    "source": [
-    "// JSON dosyası üzerinde basit bir filtreleme yapılır. Yapılmasına gerek yok.\n",
+    "// JSON dosyası üzerinde basit bir filtreleme yapılır. JSON yazmak için yapılması elzem değil\n",
     "\n",
     "val high_price =  json_df.filter(\"price > 50\")\n",
     "\n",
     "high_price.show() // DataFrame' in 20 satırı ekrana basılır.\n",
     "\n",
-    "high_price.printSchema() // DataFrame' deki kolonların schema' sını ve tiplerini gösterir.\n",
+    "high_price.printSchema() // DataFrame' deki kolonların schema' sını ve tiplerini gösterir."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOT: Yukarıdaki cell' in out kısmında high_price' in `Dataset[Row]` nesnesi olduğunu yazmaktadır. `Dataset[Row]` ifadesi `DataFrame` demektir.\n",
     "\n",
-    "// NOT: Aşağıda high_price' in Dataset[Row] nesnesi olduğunu yazmaktadır. Dataset[Row] ifadesi DataFrame demektir.\n",
-    "// Kaynak: https://spark.apache.org/docs/latest/api/scala/org/apache/spark/sql/index.html#DataFrame=org.apache.spark.sql.Dataset[org.apache.spark.sql.Row]"
+    "Kaynak: https://spark.apache.org/docs/latest/api/scala/org/apache/spark/sql/index.html#DataFrame=org.apache.spark.sql.Dataset[org.apache.spark.sql.Row]"
    ]
   },
   {
