--- a/scala/doc/scala_doc_01.ipynb
+++ b/scala/doc/scala_doc_01.ipynb
@@ -20,74 +20,53 @@
    "source": [
     "ENG: Spark’s primary abstraction is a distributed collection of items called a Dataset. Datasets can be created from Hadoop InputFormats (such as HDFS files) or by transforming other Datasets.\n",
     "\n",
-    "TR: Spark' ın `birincil soyutlaması(primary abstraction)` `item'ların dağıtık bir koleksiyonu(distributed collection of items)` olan Datasetlerdir. Datasetler Hadoop InputFormats (HDFS dosyalarıyla) ya da diğer datasetlerden dönüştürülerek oluşturulabilir."
+    "TR: Spark' ın `birincil soyutlaması(primary abstraction)` `Dataset`lerdir. `Dataset` dediği şey ise okuduğu dosyadaki `item` olarak kabul ettiği şeylerin kümesidir. `Dataset` HDSF dosyalarından ya da kaynaklardan da oluşturulabilir. `distributed collection of items` bu ifade de ki `distributed` ifadesi ne olabilir bilmiyorum."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Intitializing Scala interpreter ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://172.18.0.1:4040\n",
-       "SparkContext available as 'sc' (version = 3.0.1, master = local[*], app id = local-1613816717137)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
        "textFile: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val textFile = spark.read.textFile(\"../README.md\") //Projede bulunan README.md \n",
+    "val textFile = spark.read.textFile(\"../README.md\") //Projede bulunan README.md dosyasını okuyoruz.\n",
     "//text dosyasından yeni bir Dataset oluşturuyoruz.\n",
     "\n",
-    "// Sanırım:\n",
-    "// Bir Datasetten veri alma işlemine action deniyor.\n",
-    "// Bir Datasetin itemlarını kullanarak yeni bir Dataset oluşturmaya transform deniyor."
+    "// Bir Dataset' ten value alma işlemine action deniyor.\n",
+    "// Bir Dataset' ten yeni bir Dataset oluşturmaya da transform deniyor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res0: Long = 8\n"
+       "res4: Long = 21\n"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Bir Dataset üzerinde yapılabilecek bazı action' lar\n",
-    "textFile.count() // Number of items in this Dataset. TR: README.md dosyasında bulunan satır sayısı.\n",
-    "//Demekki item diye bahsettiği şey aslında satır sayısıymış."
+    "// Aşağıdaki bir action işlemidir.\n",
+    "textFile.count() // Number of items in this Dataset.\n",
+    "// README.md satırları bu örnekte item' dır"
    ]
   },
   {
@@ -98,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "res5: String = ## Giriş\n"
+       "res6: String = ## Açıklama\n"
       ]
      },
      "execution_count": 9,
@@ -107,51 +86,68 @@
     }
    ],
    "source": [
-    "// Bir Dataset üzerinde yapılabilecek bazı action' lar\n",
+    "// Action\n",
     "textFile.first() // First item in this Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "lineWithSpark: org.apache.spark.sql.Dataset[String] = [value: string]\r\n"
+       "lineWithSpark: org.apache.spark.sql.Dataset[String] = [value: string]\n"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Transform işlemi (bir datasetten yeni bir dataset oluşturma) için filter adlı bir fonksiyon kullandık. \n",
-    "// İçinde Spark geçen item' lardan yeni bir tane Dataset oluşturduk.\n",
-    "val lineWithSpark = textFile.filter(line => line.contains(\"Spark\"))"
+    "// Transform: Bir Dataset' ten yeni bir Dataset oluşturma işlemine denir.\n",
+    "// Elimizdeki Dataset'ten yeni bir Dataset oluşturmak için filter isimli bir fonksiyon çağıracağız.\n",
+    "// filter fonksiyonu ile elimizdeki Dataset' in item' larının alt kümesinden yeni bir Dataset oluşturacağız.\n",
+    "val lineWithSpark = textFile.filter(line => line.contains(\"Spark\")) \n",
+    "// line => line.contains(\"Spark\") -> Bu kısım Python' daki lambda fonksiyonu ile aynıdır.\n",
+    "// line isimli parametre alan bir fonksiyon var ve bu fonksiyon içinde \"Spark\" geçen item' lardan yeni bir Dataset\n",
+    "// oluşturuyor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines contains Spark: 3\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "res8: Long = 2\n"
+       "res11: Long = 3\n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "// Action\n",
+    "println(\"Number of lines contains Spark: \" + lineWithSpark.count())\n",
+    "\n",
     "// Transform ve action işlemlerini bu şekilde birleştirebiliyoruz.\n",
-    "textFile.filter(line => line.contains(\"Spark\")).count()"
+    "textFile.filter(line => line.contains(\"Spark\")).count()\n",
+    "\n",
+    "// Jupyter Notebook' ta hücrenin en sonundaki satır out kısmında yazılır yani print edilmesine gerek yoktur.\n",
+    "// Üst satırlardaki işlemler ise print edilmedilir. Bu sebeple ilk satırda print varken ikincisinde yoktur."
    ]
   },
   {
@@ -162,27 +158,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Action ve Transform işlemlerini kullanarak daha karmaşık hebaplamalar yapılabilir. Mesela elimizdeki Dataset' teki en çok kelime barındıran satırın kaç kelime barındırdığını bulmak istersek:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res11: Int = 22\n"
+       "res25: Int = 12\n"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// Daha karmaşık hesaplamalar için transform ve action işlemlerini kullanabiliriz.\n",
-    "// Mesela en çok kelime bulunan satırı bulmak isteyelim.\n",
     "textFile.map(line => line.split(\" \").size).reduce((a, b) => if (a > b) a else b)\n",
-    "// İlk olarak satırları integer sayılara map edip yeni bir Dataset oluşturuyoruz. reduce fonksiyonu yeni oluşan\n",
-    "// Dataset tarafından çağrılır ve en yüksek kelime sayısını bulur."
+    "// Bu işlemi teker teker açıklamak istiyorum\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res28: String = test\n"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// MAP Fonksiyonu\n",
+    "// Transform yapar.\n",
+    "// Bu fonksiyon kendisine parametre olarak verilen işlemi bütün satırlara ayrı ayrı uygular.\n",
+    "\n",
+    "// line => line.split(\" \").size"
    ]
   },
   {
